Bug#8101  unique indexes which attribute are _not_ specified in the order of the table does not work